tests/variadic_param_duplicate_bad.stderr
tests/variadic_param_duplicate_bad.hop:2:23: error: HOP2067: only one variadic parameter is allowed
