tests/variadic_param_duplicate_bad.hop
// Verifies variadic parameter duplicate is rejected.
fn bad(a ...i32, b ...i32) i32 {
    return 0
}
